fixed font size so not wrap in firefox

--- a/app/assets/stylesheets/summary_data_charts.css.less
+++ b/app/assets/stylesheets/summary_data_charts.css.less
@@ -129,6 +129,7 @@
           color: #fff;
           z-index:200;
           font-size: 14px;
+          font-family: Tahoma, Geneva, sans-serif;
       }
       .tt_number_circle_text{
           position: absolute;
@@ -138,8 +139,9 @@
           z-index:200;
           text-align: left;
           font-weight: bold;
-          font-size: 14px;
+          font-size: 12px;
           width: 178px;
+          font-family: Tahoma, Geneva, sans-serif;
       }
     }    
   }
